Updated evaluation metrics

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
     "import seaborn as sns\n",
-    "from sklearn.metrics import accuracy_score,cohen_kappa_score"
+    "from sklearn.metrics import accuracy_score,cohen_kappa_score, f1_score, recall_score\n",
+    "import time"
    ]
   },
   {
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -133,20 +134,24 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "reg =LogisticRegression(random_state=0)\n",
+    "t0=time.time()\n",
     "reg.fit(X_train, y_train)\n",
-    "prediction = reg.predict(X_test)"
+    "training_time=round(time.time()-t0,3)\n",
+    "t1=time.time()\n",
+    "prediction = reg.predict(X_test)\n",
+    "prediction_time=round(time.time()-t1,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -173,17 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\GKini\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -228,9 +225,7 @@
     }
    ],
    "source": [
-    "lgr=LogisticRegression(C=1)\n",
-    "lgr.fit(X_train, y_train)\n",
-    "y_pred_lgr =lgr.predict(X_test)\n",
+    "\n",
     "# computing and plotting confusion matrix\n",
     "c_m = confusion_matrix(y_test, prediction)\n",
     "print('Logistic Regression:\\nconfusion matrix\\n', c_m,'\\n\\n')\n",
@@ -241,55 +236,222 @@
     "plt.ylabel('Actual')\n",
     "plt.show()\n",
     "# classification report\n",
-    "print('\\n Classification report \\n',classification_report(y_test, prediction))"
+    "print('\\n Classification report \\n',classification_report(y_test, prediction))\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Evaluation of model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import metrics for evaluation\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score,cohen_kappa_score, f1_score, recall_score, precision_score\n",
+    "\n",
+    "#use builtin functions or use confustion matrix\n",
+    "\n",
+    "#[row, column] from confustion matrix\n",
+    "# TP - True positive, TN - True Negative, FP - False Positive, FN - False Negative\n",
+    "\n",
+    "TP = c_m[1, 1]\n",
+    "TN = c_m[0, 0]\n",
+    "FP = c_m[0, 1]\n",
+    "FN = c_m[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time:  0.005 \n",
+      "Prediction time:  0.001\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using time.time() function while training the model\n",
+    "\n",
+    "print(\"Training time: \",training_time, \"\\nPrediction time: \", prediction_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.972027972027972"
+       "0.9615384615384616"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_test, prediction, normalize=True, sample_weight=None)"
+    "#f1 score\n",
+    "\n",
+    "f1_score(y_test, prediction, labels=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9395732093809424"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cohen_kappa_score(y_test, prediction, labels=None, weights=None, sample_weight=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.972027972027972\n",
+      "0.972027972027972\n"
+     ]
+    }
+   ],
+   "source": [
+    "#accuracy score - 2 ways (1- using metrics functions or 2-using confusion matrix)\n",
+    "\n",
+    "print((TP + TN) / float(TP + TN + FP + FN))\n",
+    "print(accuracy_score(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.027972027972027972\n",
+      "0.027972027972028024\n"
+     ]
+    }
+   ],
+   "source": [
+    "#classification error - 2 ways\n",
+    "\n",
+    "classification_error = (FP + FN) / float(TP + TN + FP + FN)\n",
+    "\n",
+    "print(classification_error)\n",
+    "print(1 - accuracy_score(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9433962264150944\n",
+      "0.9433962264150944\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sensitivity - 2 ways\n",
+    "\n",
+    "sensitivity = TP / float(FN + TP)\n",
+    "\n",
+    "print(sensitivity)\n",
+    "print(recall_score(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9888888888888889\n"
+     ]
+    }
+   ],
+   "source": [
+    "#specificity\n",
+    "\n",
+    "specificity = TN / (TN + FP)\n",
+    "print(specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9803921568627451\n",
+      "0.9803921568627451\n"
+     ]
+    }
+   ],
+   "source": [
+    "#precision\n",
+    "\n",
+    "precision = TP / float(TP + FP)\n",
+    "\n",
+    "print(precision)\n",
+    "print(precision_score(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.011111111111111112\n",
+      "0.011111111111111072\n"
+     ]
+    }
+   ],
+   "source": [
+    "#false positive rate\n",
+    "\n",
+    "false_positive_rate = FP / float(TN + FP)\n",
+    "\n",
+    "print(false_positive_rate)\n",
+    "print(1 - specificity)"
+   ]
   },
   {
    "cell_type": "code",
