--- a/knn-main.ipynb
+++ b/knn-main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,11 @@
     "from sklearn.decomposition import PCA\n",
     "import seaborn as sns\n",
     "import sklearn\n",
-    "from sklearn.metrics import accuracy_score,cohen_kappa_score\n",
+    "from sklearn.metrics import accuracy_score,cohen_kappa_score, f1_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "import time"
    ]
   },
   {
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -511,10 +512,12 @@
    "source": [
     "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=1) #random_state=0 and change test_size\n",
     "knn = KNeighborsClassifier(n_neighbors = 5)\n",
-    "x,y = data.loc[:,data.columns != 'diagnosis'], data.loc[:,'diagnosis']\n",
+    "t0=time.time()\n",
     "knn.fit(X_train,y_train)\n",
+    "training_time=round(time.time()-t0,3)\n",
+    "t1=time.time()\n",
     "prediction = knn.predict(X_test)\n",
-    "#print('Prediction: {}'.format(prediction))\n",
+    "prediction_time=round(time.time()-t1,3)\n",
     "print('With KNN (K=5) accuracy is: ',knn.score(X_test,y_test)) # accuracy"
    ]
   },
@@ -585,27 +588,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.958041958041958"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "accuracy_score(y_test, prediction, normalize=True, sample_weight=None)"
+    "#import metrics for evaluation\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score,cohen_kappa_score, f1_score, recall_score, precision_score\n",
+    "\n",
+    "#use builtin functions or use confustion matrix\n",
+    "\n",
+    "#[row, column] from confustion matrix\n",
+    "# TP - True positive, TN - True Negative, FP - False Positive, FN - False Negative\n",
+    "\n",
+    "TP = c_m[1, 1]\n",
+    "TN = c_m[0, 0]\n",
+    "FP = c_m[0, 1]\n",
+    "FN = c_m[1, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time:  0.003 \n",
+      "Prediction time:  0.005\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training time: \",training_time, \"\\nPrediction time: \", prediction_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +664,7 @@
        "0.9086456558773424"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,45 +675,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9411764705882353"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(y_test, prediction, labels=None)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.958041958041958\n",
+      "0.958041958041958\n"
+     ]
+    }
+   ],
+   "source": [
+    "#accuracy score - 2 ways (1- using metrics functions or 2-using confusion matrix)\n",
+    "\n",
+    "print((TP + TN) / float(TP + TN + FP + FN))\n",
+    "print(accuracy_score(y_test, prediction))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.04195804195804196\n",
+      "0.04195804195804198\n"
+     ]
+    }
+   ],
+   "source": [
+    "#classification error - 2 ways\n",
+    "\n",
+    "classification_error = (FP + FN) / float(TP + TN + FP + FN)\n",
+    "\n",
+    "print(classification_error)\n",
+    "print(1 - accuracy_score(y_test, prediction))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9056603773584906\n",
+      "0.9056603773584906\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sensitivity - 2 ways\n",
+    "\n",
+    "sensitivity = TP / float(FN + TP)\n",
+    "\n",
+    "print(sensitivity)\n",
+    "print(recall_score(y_test, prediction))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9888888888888889\n"
+     ]
+    }
+   ],
+   "source": [
+    "#specificity\n",
+    "\n",
+    "specificity = TN / (TN + FP)\n",
+    "print(specificity)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9795918367346939\n",
+      "0.9795918367346939\n"
+     ]
+    }
+   ],
+   "source": [
+    "#precision\n",
+    "\n",
+    "precision = TP / float(TP + FP)\n",
+    "\n",
+    "print(precision)\n",
+    "print(precision_score(y_test, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.011111111111111112\n",
+      "0.011111111111111072\n"
+     ]
+    }
+   ],
+   "source": [
+    "#false positive rate\n",
+    "\n",
+    "false_positive_rate = FP / float(TN + FP)\n",
+    "\n",
+    "print(false_positive_rate)\n",
+    "print(1 - specificity)"
+   ]
   },
   {
    "cell_type": "code",
